# munk-ai

./: .gitignore  README.md
agent-base/: pyproject.toml
apps/web-ui/: README.md  index.html  package.json  tailwind.config.js
device-api/: pyproject.toml
device-api/tests/: test_protocols.py
judge-api/: pyproject.toml
judge-api/tests/: test_models.py  test_runtime.py
plan-api/: pyproject.toml
plan-api/src/munk/planning/: __init__.py  models.py  runtime.py
recording-api/: pyproject.toml
recording-api/tests/: test_recording_api_models.py  test_recording_api_runtime.py
review-api/: README.md  pyproject.toml
runner-api/: pyproject.toml
runner-api/tests/: test_runtime.py
scripts/: README.md  __init__.py  assemble_standalone_runtime.py  bootstrap_review_dev.sh  bootstrap_standalone_dev.py  build_review_knowledge.py  build_review_wheels.sh  count_code_lines.py  generate_local_api_openapi.py  install.sh  migrate_legacy_app_knowledge.py  publish_release_artifacts.py  run_workspace_tests.sh  runtime_build_support.py  update_uv_locks.py  verify_standalone_runtime.py
scripts/branding/: generate_logo_assets.py  generate_website_social_cards.py  rename_munk_brand.py
scripts/device/: __init__.py  install_wda.py  (+6 more)
shared-api/: pyproject.toml
shared-api/src/munk/agent_runtime/: control.py  lifecycle.py
shared-api/src/munk/app/: __init__.py
shared-api/src/munk/testing/: __init__.py  models.py
shared-api/tests/: test_agent_runtime_contracts.py  test_app_models.py  test_shared_models.py
shared-tools-api/: pyproject.toml
shared-tools-api/src/munk/shared_tools/: __init__.py  app_knowledge.py
shared-tools-api/tests/: test_app_knowledge_tools.py
(+529 files in other folders)
