[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "munk-plan-api"
version = "0.1.0"
description = "Plan API contracts for ai-monkey"
requires-python = ">=3.10"
dependencies = [
  "munk-review-api>=0.1.0",
  "munk-shared-api>=0.1.0",
  "munk-shared-tools-api>=0.1.0",
  "pydantic>=2.7.0",
]

[tool.uv.sources]
munk-review-api = { path = "../review-api", editable = true }
munk-shared-api = { path = "../shared-api", editable = true }
munk-shared-tools-api = { path = "../shared-tools-api", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
