[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "munk-shared-tools-api"
version = "0.1.0"
description = "Shared agent tool contracts for ai-monkey"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-ai-slim>=1.86.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
